virtuoso: SSL and libxml2 are hard dependencies

--- a/database/virtuoso/HISTORY
+++ b/database/virtuoso/HISTORY
@@ -1,4 +1,7 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+2015-01-06 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: SSL and libxml2 are hard optional
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
 2013-12-13 Treeve Jelbert <treeve@sourcemage.org>
