--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-06 Pol Vinogradov <vin.public@gmail.com>
+	* video/xbmc: spell deprecated [in favour of kodi]
+
 2015-01-05 Ismael Luceno <ismael@sourcemage.org>
 	* database/db48: new spell, Berkeley DB 4.8
 
