--- a/video/xbmc/HISTORY
+++ b/video/xbmc/HISTORY
@@ -1,3 +1,8 @@
+2015-01-06 Pol Vinogradov <vin.public@gmail.com>
+	* spell deprecated [in favour of kodi]
+	* PATCHLEVEL=9999
+	* DETAILS: version 0
+
 2014-12-23 Pol Vinogradov <vin.public@gmail.com>
 	* CONFLICTS: added for kodi
 
