tinyxml: Fix VERSION

--- a/libs/tinyxml/HISTORY
+++ b/libs/tinyxml/HISTORY
@@ -1,3 +1,6 @@
+2015-01-07 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed VERSION
+
 2013-10-26 Jeremy Blosser <jblosser@sourcemage.org>
 	* CONFIGURE, PRE_BUILD: allow building with STL support
 
