--- a/libs/librevenge/HISTORY
+++ b/libs/librevenge/HISTORY
@@ -1,3 +1,6 @@
+2015-01-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.0.2
+
 2014-06-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.0.1
 	  spell created
