--- a/libs/libodfgen/HISTORY
+++ b/libs/libodfgen/HISTORY
@@ -1,3 +1,6 @@
+2015-01-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.1.3
+
 2014-06-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.1.1
 	* DEPENDS: add librevenge, pkgconfig, doxygen
