--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-07 Ismael Luceno <ismael@sourcemage.org>
+	* devel/nickle: new spell, Nickle prototyping environment
+
 2015-01-06 Pol Vinogradov <vin.public@gmail.com>
 	* video/xbmc: spell deprecated [in favour of kodi]
 
