python-pypi/python-crontab: new spell, Python Crontab API

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-07 Pol Vinogradov <vin.public@gmail.com>
+	* python-pypi: new spell, Python Crontab API
+
 2015-01-07 Ismael Luceno <ismael@sourcemage.org>
 	* devel/nickle: new spell, Nickle prototyping environment
 
