w3: Move to emacs-lisp section

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 
 2015-01-07 Ismael Luceno <ismael@sourcemage.org>
 	* devel/nickle: new spell, Nickle prototyping environment
+	* w3: Moved to emacs-lisp section
 
 2015-01-06 Pol Vinogradov <vin.public@gmail.com>
 	* video/xbmc: spell deprecated [in favour of kodi]
