--- a/emacs-lisp/w3/HISTORY
+++ b/emacs-lisp/w3/HISTORY
@@ -1,3 +1,8 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 4.0.49
+	  fixed WEB_SITE
+	* INSTALL: Install stylesheet and icons
+
 2010-09-27 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: fix dependency on emacsen
 
