--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,3 +1,7 @@
+2015-01-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.9.8zd, 1.0.1k, SECURITY_PATCH++
+	  https://www.openssl.org/news/secadv_20150108.txt
+
 2014-12-31 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: Work-around for Bug #556 no longer needed
 	* INSTALL: Parallel jobs on install work, re-enable with make_normal
