dart-mode: new spell, Dart-mode for emacs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* emacs-lisp/dart-mode: new spell, Dart-mode for emacs
+
 2015-01-07 Pol Vinogradov <vin.public@gmail.com>
 	* python-pypi: new spell, Python Crontab API
 
