--- a/latex/xdvi/HISTORY
+++ b/latex/xdvi/HISTORY
@@ -1,3 +1,7 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 22.87
+
 2014-06-25 Ismael Luceno <ismael@sourcemage.org>
 	* INSTALL: create /usr/share/dvips/config/
 	* DETAILS: updated spell to 22.86
