--- a/doc/xdvik/HISTORY
+++ b/doc/xdvik/HISTORY
@@ -1,3 +1,6 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 22.87
+
 2010-12-11 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated to 22.84.16 .
 
