--- a/http/dillo/HISTORY
+++ b/http/dillo/HISTORY
@@ -1,3 +1,6 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.0.4.1
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
