--- a/wm-addons/wbar/HISTORY
+++ b/wm-addons/wbar/HISTORY
@@ -1,3 +1,8 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD, PRE_BUILD, gcc43.patch: removed, no longer needed
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 2.3.4
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
