python-pypi/python-crontab: fixed DEPENDS and switched to https in DETAILS

--- a/python-pypi/python-crontab/HISTORY
+++ b/python-pypi/python-crontab/HISTORY
@@ -1,2 +1,6 @@
 2015-01-07 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: http -> https
+	* DEPENDS: now depends on PYTHON and python-dateutil
+
+2015-01-07 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS, DEPENDS: spell created
