--- a/libs/asio/HISTORY
+++ b/libs/asio/HISTORY
@@ -1,3 +1,6 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.10.2
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
