--- a/perl-cpan/file-spec/HISTORY
+++ b/perl-cpan/file-spec/HISTORY
@@ -1,3 +1,6 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.47
+
 2008-06-30 David Kowis <dkowis@shlrm.org>
 	* DETAILS: updated spell to 3.2701
 
