--- a/ftp/lftp/HISTORY
+++ b/ftp/lftp/HISTORY
@@ -1,3 +1,8 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS, DEPENDS: Fixed SOURCE_URL[0]
+	  Updated spell to 4.6.1
+	  Added dependency on xz
+
 2014-08-24  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: fix bad with-SSL usage
 
