--- a/cluster/netpipe/HISTORY
+++ b/cluster/netpipe/HISTORY
@@ -1,3 +1,6 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.7.2
+
 2010-04-23 Tommy Boatman <tboatman@sourcemage.org>
 	* DETAILS: Version 3.7.1, WEB_SITE/SOURCE_URL to bitsjoule.org/netpipe
 	* PRE_BUILD: add sedit to makefile for /usr/share/pvm3 -> /usr/share/pvm
