--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2015-01-09 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.18.2
+	* info/patches/maintenance_patches_3/patch-3.18.2: added
+
 2014-12-20 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.18.1
 	* info/patches/maintenance_patches_3/patch-3.18.1: added
