--- a/ftp/curl/HISTORY
+++ b/ftp/curl/HISTORY
@@ -1,3 +1,6 @@
+2015-01-08 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 7.40.0
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: gmp
 	  SECURITY_PATCH++ multiple fixes since 7.34.0
