--- a/python-pypi/python-gnupg/HISTORY
+++ b/python-pypi/python-gnupg/HISTORY
@@ -1,3 +1,7 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.3.7
+	* PRE_BUILD: Unpack the sources correctly
+
 2013-01-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.3.2
 
