--- a/python-pypi/duplicity/HISTORY
+++ b/python-pypi/duplicity/HISTORY
@@ -1,3 +1,7 @@
+2015-01-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.6.25
+	* DEPENDS: Depends on lockfile
+
 2011-10-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
