libexplain: new spell, Explain errno values returned by libc functions

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* libs/libexplain: new spell, Explain errno values returned by libc
+	  functions
+
 2015-01-08 Ismael Luceno <ismael@sourcemage.org>
 	* emacs-lisp/dart-mode: new spell, Dart-mode for emacs
 
