--- a/collab/aegis/HISTORY
+++ b/collab/aegis/HISTORY
@@ -1,3 +1,7 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[1]
+	  updated spell to 4.25
+
 2010-10-08 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed typo in SOURCE_URL
 
