--- a/archive/dar/HISTORY
+++ b/archive/dar/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.4.15
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
