--- a/editors/emacs/HISTORY
+++ b/editors/emacs/HISTORY
@@ -1,3 +1,6 @@
+2015-01-07 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 24.4
+
 2014-11-26 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS, CONFIGURE: Allow selecting the X toolkit to use
 	* DETAILS, DOWNLOAD: Switched to Git SCM
