--- a/x11-toolkits/wxgtk-new/HISTORY
+++ b/x11-toolkits/wxgtk-new/HISTORY
@@ -1,3 +1,8 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* 0001-remove-fvisibility-inlines-hidden-from-CXXFLAGS.patch, PRE_BUILD:
+	  removed, no longer needed
+	* DETAILS: updated spell to 3.0.2
+
 2015-01-05 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Improve pcre dependency description
 
