--- a/net/torsocks/HISTORY
+++ b/net/torsocks/HISTORY
@@ -1,2 +1,7 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 2.0.0
+	* PRE_BUILD: Run autogen.sh
+
 2014-11-25 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: spell created
