--- a/security/wireshark/HISTORY
+++ b/security/wireshark/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.12.3, SECURITY_PATCH=51
+
 2014-11-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.12.2, SECURITY_PATCH=50
 
