xcb-util-cursor: Fix HISTORY entry

--- a/xorg-app/xcb-util-cursor/HISTORY
+++ b/xorg-app/xcb-util-cursor/HISTORY
@@ -1,4 +1,4 @@
-2014-03-18 Treeve Jelbert >trave@sourcemage.org?
+2014-03-18 Treeve Jelbert <trave@sourcemage.org>
 	* DETAILS: version 0.1.1
 	* DEPENDS, DETAILS: spell created
 
