--- a/xorg-app/xcb-util-cursor/HISTORY
+++ b/xorg-app/xcb-util-cursor/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Depends on xcb-util-renderutil
+
 2014-03-18 Treeve Jelbert <trave@sourcemage.org>
 	* DETAILS: version 0.1.1
 	* DEPENDS, DETAILS: spell created
