--- a/windowmanagers/i3/HISTORY
+++ b/windowmanagers/i3/HISTORY
@@ -1,3 +1,7 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 4.8
+	* DEPENDS: Depends on xcb-util-cursor
+
 2013-03-20 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 4.5.1
 
