--- a/net/cgminer/HISTORY
+++ b/net/cgminer/HISTORY
@@ -1,2 +1,5 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 4.9.0
+
 2013-11-24 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD, CONFIGURE, DEPENDS, DETAILS: spell created
