--- a/gnome3-libs/cogl/HISTORY
+++ b/gnome3-libs/cogl/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.18.2
+
 2013-05-10 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Added dependency on pango with GI
 
