--- a/crypto/qca2/HISTORY
+++ b/crypto/qca2/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS, DETAILS: Fix typo
+
 2014-12-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.1.0
 	* DEPENDS: several depends for plugins, cmake
