--- a/net/openntpd/HISTORY
+++ b/net/openntpd/HISTORY
@@ -1,5 +1,10 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2015-01-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.7p1
+	* BUILD: removed lost option
+	* PRE_BUILD, linux-adjtimex.patch: removed
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2012-08-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
