--- a/crypto/botan/HISTORY
+++ b/crypto/botan/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.10.9
+
 2012-05-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.10.1
 
