--- a/devel/cssc/HISTORY
+++ b/devel/cssc/HISTORY
@@ -1,3 +1,7 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 1.4.0
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
