qca2: Fix sed script to patch properly in any line

--- a/crypto/qca2/HISTORY
+++ b/crypto/qca2/HISTORY
@@ -1,5 +1,6 @@
 2015-01-09 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS, DETAILS: Fix typo
+	* PRE_BUILD: Fix sed script to patch properly in any line
 
 2014-12-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.1.0
