--- a/net/radvd/HISTORY
+++ b/net/radvd/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.9
+
 2009-06-01 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: updated to 1.2 - fixes various compilation issues
 
