--- a/utils/stow/HISTORY
+++ b/utils/stow/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.2.0
+
 2012-01-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.1.3
 
