--- a/gnome2-libs/at-spi2-core/HISTORY
+++ b/gnome2-libs/at-spi2-core/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.14.1
+
 2014-04-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.12.0
 
