--- a/devel/nasm/HISTORY
+++ b/devel/nasm/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.11.06
+
 2013-08-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.10.09
 
