--- a/gnome2-libs/at-spi2-atk/HISTORY
+++ b/gnome2-libs/at-spi2-atk/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILAS: version 2.14.1
+
 2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILAS: version 2.12.1
 
