box2d: Scacrifice python comments to compile
SWIG doesn't like these.

--- a/python-pypi/box2d/HISTORY
+++ b/python-pypi/box2d/HISTORY
@@ -1,2 +1,5 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD: Sacrifice python comments, SWIG doesn't like these
+
 2014-11-03 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
