{->py}box2d: renamed spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* libs/libexplain: new spell, Explain errno values returned by libc
 	  functions
 	* archive/tardy: new spell, tar post-processor
+	* python-pypi/{->py}box2d: renamed spell
 
 2015-01-08 Ismael Luceno <ismael@sourcemage.org>
 	* emacs-lisp/dart-mode: new spell, Dart-mode for emacs
