--- a/libs/libffi/HISTORY
+++ b/libs/libffi/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.2.1
+
 2011-10-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.0.10
 
