--- a/archive/pbzip2/HISTORY
+++ b/archive/pbzip2/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.1.12
+
 2014-03-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.8
 
