--- a/utils/whohas/HISTORY
+++ b/utils/whohas/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.29
+
 2010-06-27 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.24
 
