--- a/utils/pwgen/HISTORY
+++ b/utils/pwgen/HISTORY
@@ -1,3 +1,6 @@
+2015-01-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.07
+
 2008-12-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: updated to 2.06
 
@@ -12,4 +15,3 @@
 
 2005-12-12  Maurizio Boriani  <baux@sourcemage.org>
 	* DETAILS: created the spell.
-
