--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,7 @@
+2015-01-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[1]
+	  updated spell to 1.2.52
+
 2014-02-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.2.51
 
