--- a/graphics-libs/libjpeg-turbo/HISTORY
+++ b/graphics-libs/libjpeg-turbo/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 1.4.0
+
 2014-04-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.3.1
 
