musl: new spell, musl libc

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-10 Ismael Luceno <ismael@sourcemage.org>
+	* libs/musl: new spell, musl libc
+
 2015-01-09 Ismael Luceno <ismael@sourcemage.org>
 	* libs/libexplain: new spell, Explain errno values returned by libc
 	  functions
