--- a/ftp/aria2/HISTORY
+++ b/ftp/aria2/HISTORY
@@ -1,3 +1,6 @@
+2015-01-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.18.8
+
 2014-08-24  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: fix bad with-SSL usage
 
