aria2: Patch sources for GCC 4.9

--- a/ftp/aria2/HISTORY
+++ b/ftp/aria2/HISTORY
@@ -1,4 +1,5 @@
 2015-01-10 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD: Patch sources for GCC 4.9
 	* DETAILS: updated spell to 1.18.8
 
 2014-08-24  Treeve Jelbert <treeve@sourcemage.org>
