--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2015-01-11 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Fix depends: openal -> OPENAL
+
 2014-10-11 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated spell to 1.21.0
 
