--- a/graphics-libs/sfml/HISTORY
+++ b/graphics-libs/sfml/HISTORY
@@ -1,3 +1,12 @@
+2015-01-10 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: 2.2 builds with CMake
+	* DETAILS: updated spell to 2.2
+	* PRE_BUILD: removed, no longer needed
+	* fix-includes.diff: removed, no longer needed
+	* gcc-4.6.diff: removed, no longer needed
+	* interlinking.diff: removed, no longer needed
+	* repacking.diff: removed, no longer needed
+
 2011-12-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD, DEPENDS, DETAILS, PRE_BUILD: spell created
 	* added patches from Ubuntu:
