--- a/x11-toolkits/gtk+2/HISTORY
+++ b/x11-toolkits/gtk+2/HISTORY
@@ -1,3 +1,7 @@
+2015-01-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.24.25
+	* PRE_BUILD, doc.patch: removed, not needed anymore
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: added missing dependencies
 
