libs/libunibreak: new spell, a liblinebreak replacement

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-10 Pol Vinogradov <vin.public@gmail.com>
+	* libs/libunibreak: new spell, a liblinebreak replacement
+
 2015-01-10 Ismael Luceno <ismael@sourcemage.org>
 	* libs/musl: new spell, musl libc
 
