libs/liblinebreak: spell deprecated [in favour of libunibreak]

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2015-01-10 Pol Vinogradov <vin.public@gmail.com>
+	* libs/liblinebreak: spell deprecated [in favour of libunibreak]
 	* libs/libunibreak: new spell, a liblinebreak replacement
 
 2015-01-10 Ismael Luceno <ismael@sourcemage.org>
