--- a/libs/liblinebreak/HISTORY
+++ b/libs/liblinebreak/HISTORY
@@ -1,3 +1,8 @@
+2015-01-10 Pol Vinogradov <vin.public@gmail.com>
+	* spell deprecated [in favour of libunibreak]
+	* PATCHLEVEL=9999
+	* DETAILS: version 0
+
 2011-11-12 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.1, source_url, license, website,
 	  long description
