--- a/doc/fbreader/HISTORY
+++ b/doc/fbreader/HISTORY
@@ -1,3 +1,6 @@
+2015-01-10 Pol Vinogradov <vin.public@gmail.com>
+	* DEPENDS: liblinebreak -> libunibreak
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
