--- a/e-17/evas/HISTORY
+++ b/e-17/evas/HISTORY
@@ -1,3 +1,6 @@
+2015-01-10 Pol Vinogradov <vin.public@gmail.com>
+	* DEPENDS: liblinebreak -> libunibreak
+
 2014-12-16 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Replace "bit" suffix with "-bit" in description
 
