--- a/gnome2-apps/abiword/HISTORY
+++ b/gnome2-apps/abiword/HISTORY
@@ -1,3 +1,8 @@
+2015-01-11 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD: copied code from mawk
+	* abiword-gcc46.patch: removed, no longer needed
+	* DETAILS: updated spell to 3.0.1
+
 2014-07-25 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Fix typo
 
