libs/libunibreak: now it uses Github only

--- a/libs/libunibreak/HISTORY
+++ b/libs/libunibreak/HISTORY
@@ -1,2 +1,6 @@
+2015-01-11 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: switched to Github's version exclusively
+	* DEPENDS, PRE_BUILD: added for bootstrapping
+
 2015-01-10 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS, CONFLICTS: spell created
