--- a/wm-addons/tabbed/HISTORY
+++ b/wm-addons/tabbed/HISTORY
@@ -1,3 +1,6 @@
+2015-01-11 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.6
+
 2013-02-24 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.4.1
 
