ii: new spell, Minimalist filesystem-based IRC client

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-11 Ismael Luceno <ismael@sourcemage.org>
+	* chat-irc/ii: new spell, Minimalist filesystem-based IRC client
+
 2015-01-10 Pol Vinogradov <vin.public@gmail.com>
 	* libs/liblinebreak: spell deprecated [in favour of libunibreak]
 	* libs/libunibreak: new spell, a liblinebreak replacement
