--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2015-01-11 Ismael Luceno <ismael@sourcemage.org>
 	* chat-irc/ii: new spell, Minimalist filesystem-based IRC client
+	* utils/lsw: new spell, List windows titles
 
 2015-01-10 Pol Vinogradov <vin.public@gmail.com>
 	* libs/liblinebreak: spell deprecated [in favour of libunibreak]
