lsx: new spell, List executables

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2015-01-11 Ismael Luceno <ismael@sourcemage.org>
 	* chat-irc/ii: new spell, Minimalist filesystem-based IRC client
 	* utils/lsw: new spell, List windows titles
+	* utils/lsx: new spell, List executables
 
 2015-01-10 Pol Vinogradov <vin.public@gmail.com>
 	* libs/liblinebreak: spell deprecated [in favour of libunibreak]
