--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,9 @@
 	* emacs-lisp/popup-el: new spell, Visual Popup Interface
 	  Library for Emacs
 
+2015-01-11 Treeve Jelbert <treeve@sourcemage.org>
+	* kernel.gpg: Add 1DCF2659 "Marcel Holtmann <marcel@holtmann.org>"
+
 2015-01-11 Ismael Luceno <ismael@sourcemage.org>
 	* chat-irc/ii: new spell, Minimalist filesystem-based IRC client
 	* utils/lsw: new spell, List windows titles
