--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
 
 2015-01-11 Treeve Jelbert <treeve@sourcemage.org>
 	* kernel.gpg: Add 1DCF2659 "Marcel Holtmann <marcel@holtmann.org>"
+	* utils/bluez5: new spell, v5 Bluetooth
 
 2015-01-11 Ismael Luceno <ismael@sourcemage.org>
 	* chat-irc/ii: new spell, Minimalist filesystem-based IRC client
