--- a/wm-addons/slock/HISTORY
+++ b/wm-addons/slock/HISTORY
@@ -1,3 +1,6 @@
+2015-01-11 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.2
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: libx11, libxext
 
