sic: new spell, simple irc client

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* chat-irc/ii: new spell, Minimalist filesystem-based IRC client
 	* utils/lsw: new spell, List windows titles
 	* utils/lsx: new spell, List executables
+	* chat-irc/sic: new spell, simple irc client
 
 2015-01-10 Pol Vinogradov <vin.public@gmail.com>
 	* libs/liblinebreak: spell deprecated [in favour of libunibreak]
