--- a/http/surf/HISTORY
+++ b/http/surf/HISTORY
@@ -1,3 +1,6 @@
+2015-01-11 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.6
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
