--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,6 @@
+2015-01-11 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD, CONFIGURE, PRE_BUILD: allow user to specify backends to build
+
 2014-12-16 Treeve Jelbert <treeve@sourcemage.org>
 	* BUILD, CONFIGURE:  ensure that R600 is supported
 
