libpng: Fix APNG patch checksum

--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,6 @@
+2015-01-11 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed APNG patch checksum
+
 2015-01-10 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[1]
 	  updated spell to 1.2.52
