--- a/gnome2-apps/abiword/HISTORY
+++ b/gnome2-apps/abiword/HISTORY
@@ -1,6 +1,7 @@
 2015-01-11 Ismael Luceno <ismael@sourcemage.org>
 	* PRE_BUILD: copied code from mawk
 	* abiword-gcc46.patch: removed, no longer needed
+	* patches/menu.patch: Fixes missing declaration of wVBox
 	* DETAILS: updated spell to 3.0.1
 
 2014-07-25 Ismael Luceno <ismael@sourcemage.org>
