abiword: Patch includes of missing headers

--- a/gnome2-apps/abiword/HISTORY
+++ b/gnome2-apps/abiword/HISTORY
@@ -1,5 +1,6 @@
 2015-01-11 Ismael Luceno <ismael@sourcemage.org>
 	* PRE_BUILD: copied code from mawk
+	  patch includes of missing headers
 	* abiword-gcc46.patch: removed, no longer needed
 	* patches/menu.patch: Fixes missing declaration of wVBox
 	* DETAILS: updated spell to 3.0.1
