abiword: Add gnome-vfs2 to include paths and LDFLAGS

--- a/gnome2-apps/abiword/HISTORY
+++ b/gnome2-apps/abiword/HISTORY
@@ -4,6 +4,7 @@
 	* abiword-gcc46.patch: removed, no longer needed
 	* patches/menu.patch: Fixes missing declaration of wVBox
 	* DETAILS: updated spell to 3.0.1
+	* BUILD: Added gnome-vfs2 include path and LDFLAGS
 
 2014-07-25 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Fix typo
