--- a/gnome2-apps/abiword/HISTORY
+++ b/gnome2-apps/abiword/HISTORY
@@ -5,6 +5,8 @@
 	* patches/menu.patch: Fixes missing declaration of wVBox
 	* DETAILS: updated spell to 3.0.1
 	* BUILD: Added gnome-vfs2 include path and LDFLAGS
+	* CONFIGURE: Removed Emacs and Vi keybindings options, not available
+	  anymore
 
 2014-07-25 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Fix typo
