abiword: Build goffice-bits2 first, build system is broken

--- a/gnome2-apps/abiword/HISTORY
+++ b/gnome2-apps/abiword/HISTORY
@@ -5,6 +5,7 @@
 	* patches/menu.patch: Fixes missing declaration of wVBox
 	* DETAILS: updated spell to 3.0.1
 	* BUILD: Added gnome-vfs2 include path and LDFLAGS
+	  Build goffice-bits2 first, build system is broken
 	* CONFIGURE: Removed Emacs and Vi keybindings options, not available
 	  anymore
 
