--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Thomas Orgis <sobukus@sourcemage.org>
+        * DEPENDS: hack around cyclic dependency with cairo and fontconfig
+
 2015-01-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.37
 
