--- a/archive/alien/HISTORY
+++ b/archive/alien/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 8.93
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
