--- a/shell-term-fm/tcsh/HISTORY
+++ b/shell-term-fm/tcsh/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 6.18.01
+
 2009-08-03 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: updated to 6.17.00
 
