--- a/x11/xosview/HISTORY
+++ b/x11/xosview/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.16
+
 2012-12-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.12
 
