--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-12 Pol Vinogradov <vin.public@gmail.com>
+	* emacs-lisp/popup-el: new spell, Visual Popup Interface
+	  Library for Emacs
+
 2015-01-11 Ismael Luceno <ismael@sourcemage.org>
 	* chat-irc/ii: new spell, Minimalist filesystem-based IRC client
 	* utils/lsw: new spell, List windows titles
