emacs-lisp/auto-complete: needs popup-el

--- a/emacs-lisp/auto-complete/HISTORY
+++ b/emacs-lisp/auto-complete/HISTORY
@@ -1,5 +1,6 @@
 2015-01-12 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 1.4.0, switched to Github
+	* DEPENDS: added popup-el
 
 2011-05-20 Peng Chang (Charles) <chp@sourcemage.org>
 	* DEPENDS, DETAILS, INSTALL: spell created
