--- a/devel/wdiff/HISTORY
+++ b/devel/wdiff/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.2.2
+
 2013-02-23 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: version 1.1.2
 
