--- a/audio-soft/darkice/HISTORY
+++ b/audio-soft/darkice/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.2
+
 2010-07-26 Robert Figura <template@sourcemage.org>
 	* DETAILS: version -> 1.0
 
