--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* {audio-soft->python-pypi}/eyed3: spell moved
+
 2015-01-12 Pol Vinogradov <vin.public@gmail.com>
 	* emacs-lisp/popup-el: new spell, Visual Popup Interface
 	  Library for Emacs
