--- a/python-pypi/eyed3/HISTORY
+++ b/python-pypi/eyed3/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.7.5
+
 2008-08-02 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: updated spell to 0.6.16
 
