xfce4-power-manager 1.4.2

--- a/xfce/xfce4-power-manager/HISTORY
+++ b/xfce/xfce4-power-manager/HISTORY
@@ -1,3 +1,7 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 1.4.2
+
 2012-05-03 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Added dependency upower and fixed typo
 
