libshout-idjc: new spell, libshout plus some extensions for IDJC

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2015-01-12 Ismael Luceno <ismael@sourcemage.org>
 	* {audio-soft->python-pypi}/eyed3: spell moved
+	* audio-libs/libshout-idjc: new spell, libshout plus some extensions
+	  for IDJC
 
 2015-01-12 Pol Vinogradov <vin.public@gmail.com>
 	* emacs-lisp/popup-el: new spell, Visual Popup Interface
