--- a/audio-soft/idjc/HISTORY
+++ b/audio-soft/idjc/HISTORY
@@ -1,2 +1,7 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Switched libshout for libshout-idjc
+	* DETAILS: updated spell to 0.8.14
+	  fixed WEB_SITE
+
 2010-04-12 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS, DETAILS: created spell
