ubase: new spell, suckless linux base utils

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* {audio-soft->python-pypi}/eyed3: spell moved
 	* audio-libs/libshout-idjc: new spell, libshout plus some extensions
 	  for IDJC
+	* utils/ubase: new spell, suckless linux base utils
 
 2015-01-12 Pol Vinogradov <vin.public@gmail.com>
 	* emacs-lisp/popup-el: new spell, Visual Popup Interface
