sbase: new spell, suckless unix tools

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* audio-libs/libshout-idjc: new spell, libshout plus some extensions
 	  for IDJC
 	* utils/ubase: new spell, suckless linux base utils
+	* utils/sbase: new spell, suckless unix tools
 
 2015-01-12 Pol Vinogradov <vin.public@gmail.com>
 	* emacs-lisp/popup-el: new spell, Visual Popup Interface
