nwcc: new spell, Nils Weller's C Compiler

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	  for IDJC
 	* utils/ubase: new spell, suckless linux base utils
 	* utils/sbase: new spell, suckless unix tools
+	* devel/nwcc: new spell, Nils Weller's C Compiler
 
 2015-01-12 Pol Vinogradov <vin.public@gmail.com>
 	* emacs-lisp/popup-el: new spell, Visual Popup Interface
