--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	* utils/ubase: new spell, suckless linux base utils
 	* utils/sbase: new spell, suckless unix tools
 	* devel/nwcc: new spell, Nils Weller's C Compiler
+	* audio-drivers/apulse: new spell, PulseAudio emulation for ALSA
 
 2015-01-12 Pol Vinogradov <vin.public@gmail.com>
 	* emacs-lisp/popup-el: new spell, Visual Popup Interface
