doc/fbreader: made use of shared libunibreak

--- a/doc/fbreader/HISTORY
+++ b/doc/fbreader/HISTORY
@@ -1,3 +1,7 @@
+2015-01-12 Pol Vinogradov <vin.public@gmail.com>
+	* PRE_BUILD: added sed to link against shared libunibreak,
+	  not static liblinebreak.a from the libunibreak distribution
+
 2015-01-10 Pol Vinogradov <vin.public@gmail.com>
 	* DEPENDS: liblinebreak -> libunibreak
 
