claws-mail-extra-plugins: Fix the deprecation

--- a/mail/claws-mail-extra-plugins/HISTORY
+++ b/mail/claws-mail-extra-plugins/HISTORY
@@ -1,2 +1,5 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* fixed the deprecation
+
 2013-06-24 Ladislav Hagara <hgr@vabo.cz>
 	* spell deprecated, part of claws-mail since 3.9.1
