--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Remove "PIC" from CXXFLAGS, it is used as an identifier
+
 2015-01-11 Treeve Jelbert <treeve@sourcemage.org>
 	* BUILD, CONFIGURE, PRE_BUILD: allow user to specify backends to build
 
