llvm: Merge edits to scan-build

--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,5 +1,6 @@
 2015-01-12 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD: Remove "PIC" from CXXFLAGS, it is used as an identifier
+	* PRE_BUILD: Merged edits to scan-build
 
 2015-01-11 Treeve Jelbert <treeve@sourcemage.org>
 	* BUILD, CONFIGURE, PRE_BUILD: allow user to specify backends to build
