--- a/x11/xtermcontrol/HISTORY
+++ b/x11/xtermcontrol/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.2
+
 2008-03-18 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
 
