grub2: fix spelling

--- a/disk/grub2/HISTORY
+++ b/disk/grub2/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Thomas Orgis <sobukus@sourcemage.org>
+	* grub-default: It's "Source Mage", not "SourceMage"
+
 2014-10-10 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD: removed --target flag, it makes mangled binary names,
 	  fixed regexp for gcc's -O flag, now it matches -Ofast as well
