--- a/crypto/dropbear/HISTORY
+++ b/crypto/dropbear/HISTORY
@@ -1,3 +1,6 @@
+2015-01-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2014.66
+
 2012-09-26 Ismael Luceno <ismael.luceno@gmail.com>
 	* CONLFICTS: remove conflict with openssh, no conflicting files
 	  installed.
