--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,6 @@
+2015-01-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 10.4.2
+
 2015-01-01 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on g++ (CXX in gcc) from IRC
 
