cairo: update to 1.12.18 and ditch LTO stuff (update needed to fix firefox scrolling crash)

--- a/x11-libs/cairo/HISTORY
+++ b/x11-libs/cairo/HISTORY
@@ -1,3 +1,9 @@
+2015-01-13 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: update to 1.12.18 (fixing firefox crash, even)
+	* CONFIGURE, PRE_BUILD: LTO is gone from upstream! Yay!
+	* cairo-broken-lto-build.patch,
+	  cairo-1.12.16-lto-optional.patch: removed
+
 2014-10-18 Jeremy Blosser <jblosser@sourcemage.org>
 	* PRE_BUILD, cairo-1.12.16-lto-optional.patch: add --disable-lto option.
 	* CONFIGURE: Query for --disable-lto.
