--- a/windowmanagers/dvtm/HISTORY
+++ b/windowmanagers/dvtm/HISTORY
@@ -1,3 +1,6 @@
+2015-01-13 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.13
+
 2014-09-13 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.12
 
