--- a/devel/ghc/HISTORY
+++ b/devel/ghc/HISTORY
@@ -1,3 +1,6 @@
+2015-01-13 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 7.8.4
+
 2014-11-23 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 7.8.3
 
