http/firefox: updated to 35.0

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,8 @@
+2015-01-13 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 35.0, SECURITY_PATCH++
+	* DEPENDS: JPEG -> libjpeg-turbo, added appropriate
+	  gst-plagins-base{,-1.0} to each of gstreamers
+
 2014-12-19 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Depends on cairo's tee backend
 
