--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-14 Ismael Luceno <ismael@sourcemage.org>
+	* chat-irc/bip: new spell, Sexy IRC proxy
+
 2015-01-12 Ismael Luceno <ismael@sourcemage.org>
 	* {audio-soft->python-pypi}/eyed3: spell moved
 	* audio-libs/libshout-idjc: new spell, libshout plus some extensions
