porg: new spell, Source Code Package Organizer

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2015-01-14 Ismael Luceno <ismael@sourcemage.org>
 	* chat-irc/bip: new spell, Sexy IRC proxy
+	* archive/porg: new spell, Source Code Package Organizer
 
 2015-01-12 Ismael Luceno <ismael@sourcemage.org>
 	* {audio-soft->python-pypi}/eyed3: spell moved
