--- a/archive/paco/HISTORY
+++ b/archive/paco/HISTORY
@@ -1,3 +1,8 @@
+2015-01-14 Ismael Luceno <ismael@sourcemage.org>
+	* spell deprecated [Project renamed]
+	* PATCHLEVEL=9999
+	* DETAILS: version 0
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
