--- a/editors/texmacs/HISTORY
+++ b/editors/texmacs/HISTORY
@@ -1,3 +1,11 @@
+2015-01-14 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Fixed PATH for QT4
+	  Fixed LDFLAGS for otherwise missing zlib
+	* PRE_BUILD: Patch erroneous declaration of environ
+	* DEPENDS: Added flag to compile against guile 2.x
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 1.99.2
+
 2009-09-24 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
 	 * DEPENDS: switch from tetex to texlive [auto]
 
