--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,6 @@
+2015-01-14 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.19.4
+
 2014-10-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.19.3
 
