--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2015-01-15 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.2.2
+
 2014-12-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1;1
 	  SECURITY_PATCH++
