firefox: needs libxcomposite

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2015-01-15 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: needs libxcomposite
+
 2015-01-13 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 35.0, SECURITY_PATCH++
 	* DEPENDS: JPEG -> libjpeg-turbo, added appropriate
