--- a/graphics-libs/freeimage/HISTORY
+++ b/graphics-libs/freeimage/HISTORY
@@ -1,3 +1,6 @@
+2015-01-15 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Fixed CXXFLAGS
+
 2012-12-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3154
 	* BUILD: add -fpermissive to CXXFLAGS to avoid build error
