haskell/haskell-text: updated to 1.2.0.4

--- a/haskell/haskell-text/HISTORY
+++ b/haskell/haskell-text/HISTORY
@@ -1,3 +1,7 @@
+2015-01-15 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated spell to 1.2.0.4
+	* DEPENDS: removed dependency on haskell-deepseq
+
 2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.1.1.1
 
