--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,3 +1,6 @@
+2015-01-16 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.9.8ze, 1.0.1l
+
 2015-01-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.9.8zd, 1.0.1k, SECURITY_PATCH++
 	  https://www.openssl.org/news/secadv_20150108.txt
