--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-16 Treeve Jelbert <treeve@sourcemage.org>
+	* xorg-driver/xf86-input-libinput: new xorg input driver
+
 2015-01-14 Ismael Luceno <ismael@sourcemage.org>
 	* chat-irc/bip: new spell, Sexy IRC proxy
 	* archive/porg: new spell, Source Code Package Organizer
