--- a/devel/gforth/HISTORY
+++ b/devel/gforth/HISTORY
@@ -1,3 +1,6 @@
+2015-01-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.7.3
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
