fbnews: new spell, RSS/RDF newsfetcher for Fluxbox

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-16 Vlad Glagolev <stealth@sourcemage.org>
+	* news/fbnews: new spell, RSS/RDF newsfetcher for Fluxbox
+
 2015-01-14 Ismael Luceno <ismael@sourcemage.org>
 	* chat-irc/bip: new spell, Sexy IRC proxy
 	* archive/porg: new spell, Source Code Package Organizer
