--- a/xorg-app/bitmap/HISTORY
+++ b/xorg-app/bitmap/HISTORY
@@ -1,3 +1,6 @@
+2015-01-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.8
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: added missing depends libxt
 
