--- a/xorg-app/iceauth/HISTORY
+++ b/xorg-app/iceauth/HISTORY
@@ -1,3 +1,6 @@
+2015-01-17  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.7
+
 2013-07-24  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.6
 
