--- a/xorg-app/mkfontscale/HISTORY
+++ b/xorg-app/mkfontscale/HISTORY
@@ -1,3 +1,6 @@
+2015-01-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.2
+
 2013-07-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.1
 
