--- a/audio-libs/sbc/HISTORY
+++ b/audio-libs/sbc/HISTORY
@@ -1,3 +1,6 @@
+2015-01-17 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.3
+
 2013-02-10 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: spell created
 	* PRE_BUILD: used to extract tarball and verify
