--- a/database/redis/HISTORY
+++ b/database/redis/HISTORY
@@ -1,3 +1,6 @@
+2015-01-17 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.8.19
+
 2014-04-06 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.6.17; updated source url
 
