--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2015-01-173 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.62
+
 2014-11-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.61
 
