--- a/crypto/libssh/HISTORY
+++ b/crypto/libssh/HISTORY
@@ -1,3 +1,6 @@
+2015-01-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.6.4
+
 2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: use SSL provider
 
