--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-17 Ismael Luceno <ismael@sourcemage.org>
+	* mail/dmc: new spell, dynamic mail client
+
 2015-01-16 Vlad Glagolev <stealth@sourcemage.org>
 	* news/fbnews: new spell, RSS/RDF newsfetcher for Fluxbox
 
