--- a/haskell/haskell-regex-base/HISTORY
+++ b/haskell/haskell-regex-base/HISTORY
@@ -1,3 +1,6 @@
+2015-01-17 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Added dependency on haskell-mtl
+
 2011-10-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.93.2
 
