--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-18 Ismael Luceno <ismael@sourcemage.org>
+	* utils/dzen: new spell, general purpose messaging, notification
+	  and menuing program for X11
+
 2015-01-17 Ismael Luceno <ismael@sourcemage.org>
 	* mail/dmc: new spell, dynamic mail client
 
