--- a/utils/dzen/HISTORY
+++ b/utils/dzen/HISTORY
@@ -1,2 +1,3 @@
 2015-01-17 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD, DEPENDS, DETAILS, INSTALL, PREPARE: spell created
+	* DETAILS: Fixed typos
