--- a/devel/heimdall/HISTORY
+++ b/devel/heimdall/HISTORY
@@ -1,6 +1,8 @@
+2015-01-17 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.4.1
+
 2013-02-08 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.4.1RC2
 
 2013-01-07 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD, DEPENDS, DETAILS, INSTALL: spell created
-
