--- a/wm-addons/dzen2/HISTORY
+++ b/wm-addons/dzen2/HISTORY
@@ -2,6 +2,7 @@
 	* DEPENDS, DETAILS, HISTORY, PREPARE: Merged with dzen
 	  updated description, switched to git, uses prepare_select_branch
 	  and get_scm_version now.
+	* DETAILS: Fixed SOURCE_URL[0]
 
 2009-04-04 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DEPENDS: more depends and so on, forgot subversion
