--- a/libs/libgit2/HISTORY
+++ b/libs/libgit2/HISTORY
@@ -1,3 +1,6 @@
+2015-01-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.22.0
+
 2014-12-26 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Fixed SOURCE to make it a proper tarball name
 
