--- a/crypto/pgpdump/HISTORY
+++ b/crypto/pgpdump/HISTORY
@@ -1,3 +1,7 @@
+2015-01-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.29; quoting paths; use SPELL var; added
+	  COPYRIGHT file to documents
+
 2010-08-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.27
 
