--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2015-01-19 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: added FORCE_DOWNLOAD=on for scm branch
+
 2015-01-12 Thomas Orgis <sobukus@sourcemage.org>
         * DEPENDS: hack around cyclic dependency with cairo and fontconfig
 
