mail/claws-mail: c-ares is not needed anymore

--- a/mail/claws-mail/HISTORY
+++ b/mail/claws-mail/HISTORY
@@ -1,3 +1,6 @@
+2015-01-19 Pol Vinogradov <vin.public@gmail.com>
+	* DEPENDS: removed c-ares
+
 2014-10-29 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 3.11.1
 	* DEPENDS: Removed dependency on SSL and aspell, not used anymore
