--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,9 @@
+2015-01-19 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated spell to 0.7.2, removed SOURCEX
+	* DEPENDS: lua -> LUA, added youtube-dl optionally
+	  if any provider of lua is enabled
+	* INSTALL: ./waf install -> waf_install
+
 2014-12-14 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 0.7.1
 	* BUILD: needs waf_build without --nocache
