apl: new spell, interpreter for the programming language APL

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-19 Ismael Luceno <ismael@sourcemage.org>
+	* devel/apl: new spell, interpreter for the programming language
+	  APL
+
 2015-01-18 Ismael Luceno <ismael@sourcemage.org>
 	* utils/dzen: new spell, general purpose messaging, notification
 	  and menuing program for X11
