axel: SECURITY_PATCH++; security and build flags fixes

--- a/ftp/axel/HISTORY
+++ b/ftp/axel/HISTORY
@@ -1,3 +1,9 @@
+2015-01-19 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++
+	* PRE_BUILD: Apply patches
+	* patches/axel-2.4-bffr-overflow.patch: Fixes potential buffer overflow
+	* patches/axel-2.4-buildsystem.patch: Fixes build flags
+
 2014-12-30 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD: Allow larger number of redirects, like wget
