video/mpv: fixed getting the waf script from upstream

--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -3,6 +3,8 @@
 	* DEPENDS: lua -> LUA, added youtube-dl optionally
 	  if any provider of lua is enabled
 	* INSTALL: ./waf install -> waf_install
+	* PRE_BUILD, DOWNLOAD: moved most of PRE_BUILD code functionality
+	  to DOWNLOAD to get waf script from upstream in a proper way
 
 2014-12-14 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 0.7.1
