--- a/science/octave/HISTORY
+++ b/science/octave/HISTORY
@@ -1,3 +1,6 @@
+2015-01-20 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Add dependency on LAPACK
+
 2013-08-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.6.4
 	* DEPENDS: add prce, adjust readline flags
