gtk+2: PRE_BUILD sed to fix build failure with gtk-doc

--- a/x11-toolkits/gtk+2/HISTORY
+++ b/x11-toolkits/gtk+2/HISTORY
@@ -1,3 +1,6 @@
+2015-01-19 Tommy Boatman <tboatman@sourcemage.org>
+	* PRE_BUILD: sed to fix gtk-doc breakage (courtesy of LFS)
+
 2015-01-10 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 2.24.25
 	* PRE_BUILD, doc.patch: removed, not needed anymore
