video/mpv: made use of DETAILS' SOURCE2 for bootstrapping waf

--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,8 @@
+2015-01-20 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: added waf 1.8.5 as SOURCE2
+	* DOWNLOAD: removed, waf is downloaded by DETAILS
+	* PRE_BUILD: checks waf hashsum and installs it into source directory
+
 2015-01-19 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated spell to 0.7.2, removed SOURCEX
 	* DEPENDS: lua -> LUA, added youtube-dl optionally
