--- a/disk/libmtp/HISTORY
+++ b/disk/libmtp/HISTORY
@@ -1,3 +1,6 @@
+2015-01-20 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.1.8
+
 2013-03-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.1.6
 
