--- a/xorg-lib/libxft/HISTORY
+++ b/xorg-lib/libxft/HISTORY
@@ -1,3 +1,6 @@
+2015-01-20 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD, fix-freetype-includes.patch: Removed, not needed anymore
+
 2014-12-04 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD, fix-freetype-includes.patch: Added to compile against freetype2 2.5.0+
 
