--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2015-01-20 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated spell to 3.8.8.1
+
 2014-12-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.8.7.4
 
