--- a/graphics-libs/libepoxy/HISTORY
+++ b/graphics-libs/libepoxy/HISTORY
@@ -1,3 +1,6 @@
+2015-01-20 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fix SOURCE
+
 2014-06-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS version v1.2
 	  spell created
