--- a/python-pypi/pyparsing/HISTORY
+++ b/python-pypi/pyparsing/HISTORY
@@ -1,3 +1,6 @@
+2015-01-212 Treeve Jelbert <treeve@sourcmage.org>
+	* DETAILS: version 2.0.3
+
 2013-11-02 Treeve Jelbert <treeve@sourcmage.org>
 	* DETAILS: version 2.0.1
 	* DEPENDS: depends PYTHON
