--- a/python-pypi/python-stdnum/HISTORY
+++ b/python-pypi/python-stdnum/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0
+
 2014-01-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9
 
