--- a/python-pypi/six/HISTORY
+++ b/python-pypi/six/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.9.0
+
 2014-11-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.0
 
