--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 9.1
+
 2014-10-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 7.0
 
