--- a/security/fwknop/HISTORY
+++ b/security/fwknop/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.6.5; use SPELL var
+
 2014-11-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.6.4
 	* DEPENDS: libpcap becomes optional
