--- a/python-pypi/scons/HISTORY
+++ b/python-pypi/scons/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.3.4
+
 2014-08-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.3.2
 
