--- a/doc/asciidoc/HISTORY
+++ b/doc/asciidoc/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD: Fix scripts to use python2 explicitly
+
 2012-03-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 8.6.7
 
