--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.8.14, SECURITY_PATCH=14
+
 2014-11-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.12
 
