--- a/devel/asl/HISTORY
+++ b/devel/asl/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 142-bld97
+
 2010-10-11 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 142-bld78
 
