--- a/x11-toolkits/gtkmm3/HISTORY
+++ b/x11-toolkits/gtkmm3/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.11.10
+
 2013-05-04 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 3.8.1
 
