--- a/crypto/nettle/HISTORY
+++ b/crypto/nettle/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Ladislav Hagara <hgr@vabo.cz>
+	* BUILD: LDFLAGS+=... added
+
 2013-07-16 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD: changed libdir to /usr/lib
 
