--- a/crypto/seahorse/HISTORY
+++ b/crypto/seahorse/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.14.0
+
 2013-03-08 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: depends on libsecret
 
