--- a/utils/ipv6calc/HISTORY
+++ b/utils/ipv6calc/HISTORY
@@ -1,3 +1,6 @@
+2015-01-21 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.97.4
+
 2011-11-16 Tommy Boatman <tboatman@sourcemage.org>
 	* DETAILS: version 0.92.0
 
