--- a/net/monit/HISTORY
+++ b/net/monit/HISTORY
@@ -1,3 +1,6 @@
+2015-01-22 Vlad Glagolev <stealth@sourcemage.org>
+	* CONFIGURE: corrected typo
+
 2015-01-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* DEPENDS: added missing flag for PAM; cleaned up
