--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,3 +1,6 @@
+2015-01-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.4.59
+
 2014-09-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.4.58
 
