--- a/devel/guile/HISTORY
+++ b/devel/guile/HISTORY
@@ -1,3 +1,6 @@
+2015-01-22 Ladislav Hagara <hgr@vabo.cz>
+	* BUILD: LDFLAGS+=... added
+
 2014-04-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.11
 
