nmap: Specify to use python2 explicitly

--- a/security/nmap/HISTORY
+++ b/security/nmap/HISTORY
@@ -1,3 +1,6 @@
+2015-01-22 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Specify to use python2 explicitly
+
 2014-12-29 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD, DEPENDS: Remove libdnet, the latest (from 2005) version is not
 	  compatible with this version of nmap.
