--- a/disk/btrfs-progs/HISTORY
+++ b/disk/btrfs-progs/HISTORY
@@ -1,3 +1,6 @@
+2015-01-22 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Depends on xmlto & docbook-xsl for manpages
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
