http/firefox: made profile guided optimisation fully optional, simplified some logic in DEPENDS

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,9 @@
+2015-01-22 Pol Vinogradov <vin.public@gmail.com>
+	* BUILD: --enable-profile-guided-optimization is applied
+	  if $FIREFOX_PGO == y
+	* DEPENDS: simplified ifs
+	* mozconfig: removed --enable-profile-guided-optimization
+
 2015-01-15 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: needs libxcomposite
 
