--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,7 @@
+2015-01-22 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: made use of string replacement and date utility
+	  to compute VERSIONX and SOURCE_URL[0]
+
 2015-01-20 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated spell to 3.8.8.1
 
