ired: new spell, minimalistic hexadecimal editor

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-23 Ismael Luceno <ismael@sourcemage.org>
+	* editors/ired: new spell, minimalistic hexadecimal editor
+
 2015-01-19 Ismael Luceno <ismael@sourcemage.org>
 	* devel/apl: new spell, interpreter for the programming language
 	  APL
