--- a/devel/acr/HISTORY
+++ b/devel/acr/HISTORY
@@ -1,3 +1,6 @@
+2015-01-23 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.9.9
+
 2012-01-29 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.8.6
 
