--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-23 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/wsgigzip: new spell, decorator for flup's gzip compression
+	  WSGI middleware
+
 2015-01-23 Ismael Luceno <ismael@sourcemage.org>
 	* editors/ired: new spell, minimalistic hexadecimal editor
 
