breach_buster: new spell, BREACH-resistant gzip middleware for Django

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2015-01-23 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/wsgigzip: new spell, decorator for flup's gzip compression
 	  WSGI middleware
+	* python-pypi/breach_buster: new spell, BREACH-resistant gzip middleware
+	  for Django
 
 2015-01-23 Ismael Luceno <ismael@sourcemage.org>
 	* editors/ired: new spell, minimalistic hexadecimal editor
