--- a/python-pypi/unidecode/HISTORY
+++ b/python-pypi/unidecode/HISTORY
@@ -1,3 +1,6 @@
+2015-01-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: use SPELLX in SOURCE
+
 2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.04.17; use SPELLX
 
