--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,7 @@
+2015-01-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.37 (stable); SECURITY_PATCH++
+	  (CVE-2015-0231, CVE-2014-9427, CVE-2015-0232)
+
 2014-12-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.36 (stable); SECURITY_PATCH++
 	  (CVE-2014-8142)
