--- a/xorg-extras/xterm/HISTORY
+++ b/xorg-extras/xterm/HISTORY
@@ -1,3 +1,6 @@
+2015-01-23 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 314
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: freetype2 was both hard and optional dep
 	           depends libxpm
