--- a/video/lives/HISTORY
+++ b/video/lives/HISTORY
@@ -1,3 +1,6 @@
+2015-01-23 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.2.7
+
 2012-12-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: removed dependencies on expat, libggi, libgii, libpng,
 	  libxau, libxcb, libxdmcp, libxext, libxrender, libxxf86dga,
