--- a/kernels/lirc/HISTORY
+++ b/kernels/lirc/HISTORY
@@ -1,3 +1,6 @@
+2015-01-23 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.9.2
+
 2012-03-12 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 0.9.0
 	* DEPENDS: added syslog support
