--- a/kernels/lirc/HISTORY
+++ b/kernels/lirc/HISTORY
@@ -1,5 +1,7 @@
 2015-01-23 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.9.2
+	* PRE_BUILD, patches/python3-fixes.patch: Fixed building with python 3
+	  as system default
 
 2012-03-12 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 0.9.0
