gurus.gpg: added my new uids

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-23 Pavel Vinogradov <public@sourcemage.org>
+	* gurus.gpg: added my new uids
+
 2015-01-23 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/wsgigzip: new spell, decorator for flup's gzip compression
 	  WSGI middleware
