--- a/xorg-app/weston/HISTORY
+++ b/xorg-app/weston/HISTORY
@@ -1,3 +1,6 @@
+2015-01-249 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.1
+
 2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: MESALIB => mesalib
 
