phonon: Add proper to enable/disable pulseaudio

--- a/kde4-support/phonon/HISTORY
+++ b/kde4-support/phonon/HISTORY
@@ -1,3 +1,6 @@
+2015-01-25 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Add proper flag to enable/disable pulseaudio
+
 2014-09-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.8.0
 	* PRE_BUILD: removed
