--- a/python-pypi/bpython/HISTORY
+++ b/python-pypi/bpython/HISTORY
@@ -1,3 +1,6 @@
+2015-01-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.13.2
+
 2014-07-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.13.1
 
