--- a/libs/libva/HISTORY
+++ b/libs/libva/HISTORY
@@ -1,3 +1,6 @@
+2015-01-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.0
+
 2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: MESALIB => mesalib
 
