nepomuk-core: Depends on soprano's virtuoso backend

--- a/kde4/nepomuk-core/HISTORY
+++ b/kde4/nepomuk-core/HISTORY
@@ -1,3 +1,6 @@
+2015-01-25 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Depends on soprano's virtuoso backend
+
 2013-08-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.10.5
 
