--- a/mail/mutt/HISTORY
+++ b/mail/mutt/HISTORY
@@ -1,3 +1,7 @@
+2015-01-25 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: updated devel version to 1.5.23, added bitbucket source
+	  url, SECURITY_PATCH++
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
