--- a/gnome2-libs/gvfs/HISTORY
+++ b/gnome2-libs/gvfs/HISTORY
@@ -1,3 +1,6 @@
+2015-01-25 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.23.4
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
