x264: Last snapshot is 20141218

--- a/video-libs/x264/HISTORY
+++ b/video-libs/x264/HISTORY
@@ -1,3 +1,6 @@
+2015-01-25 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Last snapshot is 20141218
+
 2010-01-05 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: removd gtk+2, no GUI frontend included anymore
 
