mypaint Fix SOURCE_URL

--- a/graphics/mypaint/HISTORY
+++ b/graphics/mypaint/HISTORY
@@ -1,3 +1,6 @@
+2015-01-25 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
