--- a/telephony/telepathy-glib/HISTORY
+++ b/telephony/telepathy-glib/HISTORY
@@ -1,3 +1,6 @@
+2015-01-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.24.1
+
 2012-10-27 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.20.0
 
