--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2015-01-26 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: updated spell to 35.0.1
+
 2015-01-22 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD: --enable-profile-guided-optimization is applied
 	  if $FIREFOX_PGO == y
