sup: new spell, minimalistic sudo replacement

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-26 Ismael Luceno <ismael@sourcemage.org>
+	* utils/sup: new spell, minimalistic sudo replacement
+
 2015-01-23 Pavel Vinogradov <public@sourcemage.org>
 	* gurus.gpg: added my new uids
 
