--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-27 Ladislav Hagara <hgr@vabo.cz>
+	* gnu.gpg: added key 5D1B36D7, Andreas Gruenbacher <agruen@gnu.org>
+
 2015-01-26 Ismael Luceno <ismael@sourcemage.org>
 	* utils/sup: new spell, minimalistic sudo replacement
 
