--- a/database/mariadb/HISTORY
+++ b/database/mariadb/HISTORY
@@ -1,3 +1,8 @@
+2015-01-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.5.41 (5.5 branch); SECURITY_PATCH++
+	  (CVE-2015-0411, CVE-2015-0382, CVE-2015-0381, CVE-2015-0432,
+	  CVE-2014-6568, CVE-2015-0374)
+
 2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.5.40 (5.5 branch); SECURITY_PATCH=1
 
