--- a/xorg-driver/xf86-input-libinput/HISTORY
+++ b/xorg-driver/xf86-input-libinput/HISTORY
@@ -1,3 +1,6 @@
+2015-01-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.6.0
+
 2015-01-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.5.0
 	* DETAILS, DEPENDS, HISTORY: created spell
