--- a/crypto/gpgme/HISTORY
+++ b/crypto/gpgme/HISTORY
@@ -1,3 +1,6 @@
+2015-01-28 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated GPGME_BRANCH=1.5 to 1.5.3
+
 2014-11-081 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: gnupg-exp => GNUPG
 
