--- a/crypto/gpa/HISTORY
+++ b/crypto/gpa/HISTORY
@@ -1,3 +1,6 @@
+2015-01-28 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.9.7
+
 2014-11-27 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.9.6
 
