--- a/xorg-data/xkeyboard-config/HISTORY
+++ b/xorg-data/xkeyboard-config/HISTORY
@@ -1,3 +1,6 @@
+2015-01-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.14
+
 2014-10-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.13
 
