--- a/libs/orc/HISTORY
+++ b/libs/orc/HISTORY
@@ -1,3 +1,7 @@
+2015-01-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4.23
+	  new url
+
 2014-02-14 Tommy Boatman <tboatman@sourcemage.org>
 	* DEPENDS: Created.  gtk-doc optional for doc building
 	* HISTORY: Corrected a couple of typos
