science-libs/mdds: new spell, multi-dimensional data index algorithm

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-29 Pavel Vinogradov <public@sourcemage.org>
+	* science-libs/mdds: new spell, multi-dimensional data index algorithm
+
 2015-01-27 Ladislav Hagara <hgr@vabo.cz>
 	* gnu.gpg: added key 5D1B36D7, Andreas Gruenbacher <agruen@gnu.org>
 
