libffi: Recast dependees on x.y version changes in x.y.z updates
3.0.10 -> 3.2.1 is an ABI change causing breakage

--- a/libs/libffi/HISTORY
+++ b/libs/libffi/HISTORY
@@ -1,3 +1,7 @@
+2015-01-29 Eric Sandall <sandalle@sourcemage.org>
+	* UP_TRIGGERS: 3.0.10 -> 3.2.1 is an ABI change causing breakage
+	  Recast dependees on x.y version changes in x.y.z updates
+
 2015-01-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.2.1
 
