science-libs/mdds: added scm branch and its sub_dependency

--- a/science-libs/mdds/HISTORY
+++ b/science-libs/mdds/HISTORY
@@ -1,3 +1,5 @@
 2015-01-29 Pavel Vinogradov <public@sourcemage.org>
-	* DEPENDS, DETAILS: spell created
+	* DEPENDS, DETAILS: spell created, added scm branch, added boost
+	* PREPARE, PRE_BUILD: added scm specific code
+	* *SUB_DEPENDS: added scm sub_dependency
 
