--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2015-01-29 Pavel Vinogradov <public@sourcemage.org>
 	* science-libs/mdds: new spell, multi-dimensional data index algorithm
+	* libs/ixion: new spell, a general purpose formula parser and
+	  interpreter
 
 2015-01-27 Ladislav Hagara <hgr@vabo.cz>
 	* gnu.gpg: added key 5D1B36D7, Andreas Gruenbacher <agruen@gnu.org>
