--- a/graphics-libs/libvisio/HISTORY
+++ b/graphics-libs/libvisio/HISTORY
@@ -1,3 +1,8 @@
+2015-01-29 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0],
+	  updated spell to 0.1.1
+	* PRE_BUILD: added to fix missing header error
+
 2012-08-23 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.0.19
 
