readline: corrected a typo in HISTORY (cherry picked from commit 45a920c32dbcdcd7295b9cfce305455720abef0b)

--- a/libs/readline/HISTORY
+++ b/libs/readline/HISTORY
@@ -1,5 +1,5 @@
 2014-05-16 Treeve Jelbert <treeve@sourcemage.org>
-	* INSTAALL: add ldconfig, otherwise next spell fails
+	* INSTALL: add ldconfig, otherwise next spell fails
 
 2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.3
