readline: resurrect-compliance++ (cherry picked from commit ceeb6aaa052b87fdbfc66d9ca759befb071cbea9)

--- a/libs/readline/HISTORY
+++ b/libs/readline/HISTORY
@@ -1,3 +1,9 @@
+2015-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* FINAL: added, INSTALL is not the right place for ldconfig, move it
+	  here
+	* POST_RESURRECT: added, duplicate FINAL instructions for installing
+	  via resurrect
+
 2014-05-16 Treeve Jelbert <treeve@sourcemage.org>
 	* INSTALL: add ldconfig, otherwise next spell fails
 
