--- a/disk/lilo/HISTORY
+++ b/disk/lilo/HISTORY
@@ -1,3 +1,13 @@
+2015-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 24.1; use lilo.gpg
+	* CONFIGURE: remove obsolete option
+	* xvd.patch, 0001-fix-failure-during-install.patch: removed, fixed by
+	  upstream
+	* 1FE1B08B.gpg: removed, outdated
+	* lilo.gpg: added, 39A11092 public key (Joachim Wiedorn
+	  <joodevel@joonet.de>) imported
+	* PRE_BUILD: removed, not needed anymore
+
 2014-04-25 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFIGURE: added option to apply XVD patch
 	* PRE_BUILD: apply patch
