--- a/net/bind/HISTORY
+++ b/net/bind/HISTORY
@@ -1,3 +1,6 @@
+2015-01-30 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 9.10.1-P1
+
 2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: use SSL provider
 
