--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2015-01-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.8.8.2
+
 2015-01-22 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: made use of string replacement and date utility
 	  to compute VERSIONX and SOURCE_URL[0]
