--- a/python-pypi/wsgigzip/HISTORY
+++ b/python-pypi/wsgigzip/HISTORY
@@ -1,3 +1,7 @@
+2015-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.1.3
+	* PRE_BUILD: removed, fixed by upstream
+
 2015-01-23 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: added, to normalize permissions
 
