--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2015-01-31 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.7.1
+
 2015-01-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.6.7
 
