--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2015-01-31 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.38
+
 2015-01-19 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: added FORCE_DOWNLOAD=on for scm branch
 
