--- a/chat-im/pidgin/HISTORY
+++ b/chat-im/pidgin/HISTORY
@@ -1,3 +1,9 @@
+2015-01-31 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: updated spell to 2.10.11, SECURITY_PATCH++, (CVE-2014-3694),
+	  changed WEB_SITE
+	* pidgin.gpg: updated the key, now it's 4C292FCC,
+	  Mark Doliner <mark@kingant.net>
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: nspr
 
