audio-drivers/alsa-utils: moved BUILD scm code to PRE_BUILD, added gettext for scm branch as well

--- a/audio-drivers/alsa-utils/HISTORY
+++ b/audio-drivers/alsa-utils/HISTORY
@@ -1,3 +1,9 @@
+2015-01-31 Pavel Vinogradov <public@sourcemage.org>
+	* BUILD: deleted
+	* DEPENDS: added gettext for scm branch
+	* PRE_BUILD: added, contains most of gitcompile code from scm branch.
+	  now fully non-interactive
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
