x11-libs/fontconfig: version 2.11.92

--- a/x11-libs/fontconfig/HISTORY
+++ b/x11-libs/fontconfig/HISTORY
@@ -1,3 +1,6 @@
+2015-01-31 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: updated spell to 2.11.92
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: added missing dependencies
 
