yaml-cpp - build shared library

--- a/libs/yaml-cpp/HISTORY
+++ b/libs/yaml-cpp/HISTORY
@@ -1,5 +1,6 @@
 2015-02-01 Treeve Jelbert <treeve@sourcemage.org>
 	* vresion 0.5.1
+	* BUILD: force BUILD_SHARED_LIBS
 
 2013-01-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD, DEPENDS, DETAILS: spell created
