--- a/devel/ccache/HISTORY
+++ b/devel/ccache/HISTORY
@@ -1,3 +1,6 @@
+2015-02-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.2.1
+
 2014-11-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.2
 	* samba.gpg:add 5594ADB8: Joel Rosdahl <joel@rosdahl.net>
