--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,6 @@
+2015-02-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: update stable to 3.3.12
+
 2014-11-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 3.2.20 / 3.1.28
 	  SECURITY_PATCH++  fixes CVE-2014-8564
