hatta: added missing dependency

--- a/python-pypi/hatta/HISTORY
+++ b/python-pypi/hatta/HISTORY
@@ -1,3 +1,6 @@
+2015-02-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added missing dependency
+
 2014-12-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* parser.patch: added, backported official patch
