--- a/devel/perl/HISTORY
+++ b/devel/perl/HISTORY
@@ -1,3 +1,6 @@
+2015-02-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.20.1
+
 2014-05-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.20.0
 	* INSTALL: remove obsoolete options
