--- a/net/socat/HISTORY
+++ b/net/socat/HISTORY
@@ -1,3 +1,9 @@
+2015-02-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.7.3.0; SECURITY_PATCH++ (CVE-2015-1379)
+	* DEPENDS: fixed openssl flag
+	* PRE_BUILD, fix-linux-errqueue.h-not-found.patch: dropped, fixed by
+	  upstream
+
 2014-12-04 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Add autoconf for `autoconf` in PRE_BUILD
 	* PRE_BUILD, fix-linux-errqueue.h-not-found.patch: Added to fix compilation
