--- a/http/privoxy/HISTORY
+++ b/http/privoxy/HISTORY
@@ -1,3 +1,7 @@
+2015-02-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.0.23; SECURITY_PATCH++ (CVE requests
+	  pending)
+
 2013-03-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.0.21; SECURITY_PATCH++ (CVE-2013-2503)
 	* privoxy.gpg: added 8BA2371C public key: Fabian Keil <fk@fabiankeil.de>
