libinput - extra depends

--- a/xorg-lib/libinput/HISTORY
+++ b/xorg-lib/libinput/HISTORY
@@ -1,5 +1,6 @@
 2015-02-03 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 0.0.0
+	* DETAILS: version 0.9.0
+	* DEPENDS: add UDEV, doxygen, gtk+3, glib, cairo
 
 2015-01-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.0
