--- a/utils/dialog/HISTORY
+++ b/utils/dialog/HISTORY
@@ -1,3 +1,6 @@
+2015-02-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2-20150125
+
 2014-12-31 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.2-20140911
 	  See http://invisible-island.net/dialog/CHANGES
