--- a/net/openntpd/HISTORY
+++ b/net/openntpd/HISTORY
@@ -1,3 +1,6 @@
+2015-02-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.7p3
+
 2015-01-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.7p1
 	* BUILD: removed lost option
