--- a/archive/burp/HISTORY
+++ b/archive/burp/HISTORY
@@ -1,3 +1,6 @@
+2015-02-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.32 (devel)
+
 2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.24 (devel)
 	* DEPENDS: use SSL provider
