--- a/net/rpcbind/HISTORY
+++ b/net/rpcbind/HISTORY
@@ -1,3 +1,8 @@
+2015-02-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.2.2
+	* DEPENDS: added missing optional dependencies
+	* BUILD: added, configure to run under system account and create it
+
 2011-06-24 ELisamuel Resto <ryuji@sourcemage.org>
 	* PRE_BUILD, rpcbind-sunrpc.patch: Make rpcbind use 'sunrpc' service name
 
