accounts, groups: added account data for rpcbind spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-02-05 Vlad Glagolev <stealth@sourcemage.org>
+	* accounts, groups: added account data for rpcbind spell
+
 2015-01-29 Pavel Vinogradov <public@sourcemage.org>
 	* science-libs/mdds: new spell, multi-dimensional data index algorithm
 	* libs/ixion: new spell, a general purpose formula parser and
