--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,10 @@
+2015-02-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.17.0
+	  update description
+	* CONFLICTS: add xf86-video-modesetting, glamor
+	* CONFIGURE: delete obsolete options
+	* DEPENDS: presentproto is required
+
 2014-12-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.16.3
 	  CVE-2014-8092..8103
