xorg-xserver/xorg-server: needs xcb-util-renderutil

--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2015-02-05 Pavel Vinogradov <vin.public@gmail.com>
+	* DEPENDS: added xcb-util-renderutil
+
 2015-02-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.17.0
 	  update description
