--- a/database/postgresql/HISTORY
+++ b/database/postgresql/HISTORY
@@ -1,3 +1,8 @@
+2015-02-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 9.3.6; SECURITY_PATCH++ (CVE-2015-0241,
+	  CVE-2015-0242, CVE-2015-0243, CVE-2015-0244, CVE-2014-8161,
+	  CVE-2014-0067)
+
 2014-09-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 9.3.5; removed unsupported PGCluster
 	  patch
